enhance explore
